# Dart_Vision

./: CMakeLists.txt  README.md  readme.md  watchdog.sh
Camera/log/: error_20260311-230558.37884  error_20260311-230559.37884  error_20260311-230600.37884  error_20260311-230601.37884  error_20260311-230602.37884  error_20260311-230603.37884  error_20260311-230604.37884  error_20260311-230605.37884  error_20260311-230606.37884  error_20260311-230607.36743  error_20260311-230608.36743  error_20260311-230609.36743  error_20260311-230610.36743  error_20260311-230611.36743  error_20260311-230612.36743  error_20260311-230612.37884  error_20260311-230613.37884  error_20260311-230614.37884  error_20260311-230615.37884  error_20260311-230616.37884  error_20260311-230617.37884  error_20260311-230618.37884  error_20260311-230619.37884  error_20260311-230620.37884  error_20260311-230621.37884  error_20260311-230622.37884  error_20260311-230623.37884  error_20260311-230624.36743  error_20260311-230625.36743  error_20260311-230626.36743  error_20260311-230627.36743  error_20260311-230628.36743  error_20260311-230629.37884  error_20260311-230630.37884  error_20260311-230631.37884  error_20260311-230632.37884  error_20260311-230633.37884  error_20260311-230634.37884  error_20260311-230635.37884  error_20260311-230636.37884  (+2 more)
calibration/: capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  dart.yaml  example.yaml  sentry.yaml  standard.yaml  swerve.yaml  uav.yaml
examples/: capture.cpp  dataSetCollection.cpp
io/: CMakeLists.txt  camera.cpp  command.hpp
io/hikrobot/: hikrobot.cpp
io/interface/: hseven.cpp  hseven.hpp
io/mindvision/: mindvision.cpp
io/serial/src/: serial.cc
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
src/: auto_aim_debug.cpp  auto_aim_thread_debug.cpp  dart.cpp  dart_debug.cpp  multithread_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  detector.cpp  ekfpnp.cpp  ekfpnp.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo11.cpp  yolo11.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_dart/: CMakeLists.txt  dart_detector.cpp  dart_detector.hpp  lightspot.hpp
tasks/omniperception/: CMakeLists.txt  decider.cpp  decider.hpp  perceptron.cpp  perceptron.hpp
tests/: armor_detect_test.cpp  armor_detect_video_test.cpp  auto_aim_test.cpp  auto_shoot_test.cpp  camera_detect_test.cpp  camera_thread_test.cpp  cboard_test.cpp  ekfpnp_test.cpp  find_lightspot_test.cpp  gimbal_response_test.cpp  multi_usbcamera_test.cpp  pnp_test.cpp  subscribe_test.cpp  topic_loop_test.cpp  triangle_test.cpp  usbcamera_detect_test.cpp  yolo_video_test.cpp  zero_point_test.cpp
tools/: CMakeLists.txt  crc.cpp  dart_recorder.cpp  dart_recorder.hpp  exiter.cpp  exiter.hpp  math_tools.cpp  math_tools.hpp  thread_pool.hpp  thread_safe_queue.hpp  trajectory.cpp
